--- a/backend/package.json
+++ b/backend/package.json
@@ -35,9 +35,11 @@
     "nodemailer": "^7.0.10",
     "path": "^0.12.7",
     "pdfkit": "^0.17.2",
-    "validator": "^13.15.20"
+    "swagger-ui-express": "^5.0.1",
+    "validator": "^13.15.20",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.11"
   }
 }
